# access_control_app

./: .env.postgres  .gitignore  README.md  docker-compose.yml  env.postgres.example  main.py  pyproject.toml
BFF/: Makefile  env.example  pyproject.toml
BFF/app/: client.py  config.py  dependencies.py  main.py  schemas.py
BFF/app/api/: accesses.py  groups.py  publish.py  requests.py  users.py
BFF/app/messaging/: broker.py  fs_broker.py
BFF/app/schemas/: access_schemas.py  group_schemas.py  request_schemas.py  user_schemas.py
BFF/app/services/: publish_service.py
registry_service/: Makefile  env.example  main.py  pyproject.toml
registry_service/alembic/: env.py
registry_service/alembic/versions/: 19225c882500_add_request_model.py  a36f7a3a8516_first.py  c6f363e4bb1e_fix_user_group.py  cba9974dc9b5_initial_tables.py
registry_service/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
registry_service/app/api/: accesses.py  groups.py  requests.py  router.py  users.py
registry_service/app/exceptions/: exceptions.py
registry_service/app/messaging/: consumer.py  faststream_broker.py  schemas.py
registry_service/app/models/: __init__.py  access.py  associations.py  group.py  request.py  resource.py  user.py
registry_service/app/repositories/: UnitOfWork.py  access_repository.py  group_repository.py  repository_protocol.py  request_repository.py  uow.py  user_repository.py
validator_service/: Dockerfile  env.example  main.py  pyproject.toml
validator_service/app/: config.py  main.py
(+13 files in other folders)
