[project]
name = "access-control-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "BFF",
    "validator_service",
    "registry_service",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
